--- a/app/src/main/res/layout/player_vod_control_view.xml
+++ b/app/src/main/res/layout/player_vod_control_view.xml
@@ -425,10 +425,11 @@
                 android:id="@+id/tv_info_name"
                 android:paddingLeft="@dimen/vs_20"
                 android:paddingTop="@dimen/vs_40"
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/vs_960"
                 android:layout_height="wrap_content"
+				android:marqueeRepeatLimit="marquee_forever"
                 android:text="http://"
-                android:maxLines="1"/>
+                android:singleLine="true"/>
         </LinearLayout>
         <LinearLayout
             android:layout_gravity="right"
