--- a/app/src/main/res/layout/player_vod_control_view.xml
+++ b/app/src/main/res/layout/player_vod_control_view.xml
@@ -414,22 +414,22 @@
             android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/vs_20"
+            android:layout_marginLeft="@dimen/vs_15"
             android:layout_marginTop="@dimen/vs_0"
-            android:layout_marginStart="@dimen/vs_20">
+            android:layout_marginStart="@dimen/vs_15">
             <TextView
                 android:textSize="@dimen/ts_20"
                 android:textColor="@android:color/white"
                 android:ellipsize="end"
                 android:layout_gravity="left"
                 android:id="@+id/tv_info_name"
-                android:paddingLeft="@dimen/vs_20"
+                android:paddingLeft="@dimen/vs_15"
                 android:paddingTop="@dimen/vs_40"
                 android:layout_width="@dimen/vs_960"
                 android:layout_height="wrap_content"
-				android:marqueeRepeatLimit="marquee_forever"
                 android:text="http://"
-                android:singleLine="true"/>
+                android:singleLine="true"
+                android:marqueeRepeatLimit="marquee_forever"/>
         </LinearLayout>
         <LinearLayout
             android:layout_gravity="right"
@@ -437,7 +437,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/vs_0"
-            android:layout_marginRight="@dimen/vs_20">
+            android:layout_marginRight="@dimen/vs_15">
             <TextView
                 android:textSize="@dimen/ts_40"
                 android:textColor="@android:color/white"
@@ -445,7 +445,7 @@
                 android:layout_gravity="right"
                 android:id="@+id/tv_sys_time_xu"
                 android:paddingTop="@dimen/vs_30"
-                android:paddingRight="@dimen/vs_20"
+                android:paddingRight="@dimen/vs_15"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="00:00:00"
