--- a/app/src/main/res/layout/player_vod_control_view.xml
+++ b/app/src/main/res/layout/player_vod_control_view.xml
@@ -568,3 +568,18 @@
         android:src="@drawable/icon_unlock"
         android:paddingHorizontal="@dimen/vs_20"/>
 </FrameLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:id="@+id/xuamenglock"
+        android:background="@color/color_90000000"
+        android:visibility="gone"
+		android:clickable="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <TextView
+            android:textSize="@dimen/ts_500"
+            android:textColor="@color/color_90000000"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="许大师透明层"/>
+    </LinearLayout>
