--- a/app/src/main/res/layout/player_vod_control_view.xml
+++ b/app/src/main/res/layout/player_vod_control_view.xml
@@ -570,7 +570,6 @@
 </FrameLayout>
     <LinearLayout
         android:orientation="vertical"
-        android:id="@+id/mxuplay_lock"
         android:background="@color/color_90000000"
         android:visibility="gone"
 		android:clickable="true"
@@ -578,6 +577,7 @@
         android:layout_height="match_parent">
         <TextView
             android:textSize="@dimen/ts_500"
+			android:id="@+id/xuameng_lock"
             android:textColor="@color/color_90000000"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
