--- a/app/src/main/res/layout/player_vod_control_view.xml
+++ b/app/src/main/res/layout/player_vod_control_view.xml
@@ -5,7 +5,7 @@
     android:layout_height="fill_parent"
     android:clickable="true"
     android:enabled="true"
-
+    android:visibility="gone"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
