--- a/app/src/main/res/layout/player_vod_control_view.xml
+++ b/app/src/main/res/layout/player_vod_control_view.xml
@@ -5,13 +5,14 @@
     android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <FrameLayout
+    <LinearLayout
         android:id="@+id/xuamengView"
+		android:visibility="gone"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:clickable="true"
         android:enabled="true">
-    </FrameLayout>
+    </LinearLayout>
     <LinearLayout
         android:orientation="vertical"
         android:id="@+id/tv_top_l_container"
