--- a/app/src/main/res/layout/player_vod_control_view.xml
+++ b/app/src/main/res/layout/player_vod_control_view.xml
@@ -387,8 +387,8 @@
                 android:id="@+id/seekBar"
                 android:background="@null"
                 android:padding="@dimen/vs_0"
-                android:focusable="false"
-                android:focusableInTouchMode="false"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
                 android:layout_width="0.0dip"
                 android:layout_height="wrap_content"
                 android:maxHeight="@dimen/vs_6"
