--- a/app/src/main/res/layout/player_vod_control_view.xml
+++ b/app/src/main/res/layout/player_vod_control_view.xml
@@ -530,7 +530,17 @@
         android:layout_height="@dimen/vs_200">
         <ImageView
             android:id="@+id/tv_progress_icon"
+			android:layout_gravity="right"
             android:focusable="false"
+			android:paddingRight="@dimen/vs_10"
+            android:focusableInTouchMode="false"
+            android:layout_width="@dimen/vs_60"
+            android:layout_height="@dimen/vs_60"/>
+	    <ImageView
+            android:id="@+id/tv_progress_icon_1"
+			android:layout_gravity="left"
+            android:focusable="false"
+			android:paddingLeft="@dimen/vs_10"
             android:focusableInTouchMode="false"
             android:layout_width="@dimen/vs_60"
             android:layout_height="@dimen/vs_60"/>
